--- a/styles/components.css
+++ b/styles/components.css
@@ -1,13 +1,14 @@
 .console-container {
   min-width: 420px;
   max-width: 420px;
-  height: 100vh;
-  max-height: 100vh;
+  height: 100dvh;
+  max-height: 100dvh;
+  background-color: var(--background);
 }
 
 .main-container {
   max-width: 100vw;
-  max-height: 100vh;
+  max-height: 100dvh;
   overflow-y: scroll;
   overflow-x: hidden;
   padding: 0.5rem 6rem 20rem 6rem;
@@ -94,7 +95,7 @@
 
 @media screen and (max-width: 1024px) {
   .main-container {
-    padding: 0.5rem 1.85rem 20rem 1.85rem !important;
+    padding: 0.5rem 1.85rem 20rem 1.85rem;
   }
 }
 
@@ -102,9 +103,17 @@
   .console-container {
     min-width: 100vw;
     max-width: 100vw;
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 100;
   }
   .console-container.minimized {
     max-height: 74px;
+  }
+
+  .main-container {
+    padding: 82px 1.85rem 20rem 1.85rem;;
   }
 
   .flex-col-sm {
